kubernetes/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb-svc
  namespace: default
spec:
  ports:
    - name: 27017-27017
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongodb
  type: NodePort
