kubernetes/lambda-clone-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lambda-clone-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: "lambda-clone-api.dev-doe.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lambda-clone-svc
                port:
                  number: 443
